--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ h1, p, div{
     <p id='p_game_ver'>Latest version : </p> 
     <a id="p_game_url" class="btn btn-primary">Download</a>
     <p id='p_game_verr'>Pre-download : </p> 
-    <a id="p_game_urll" class="btn btn-secondary">Loading...</a>
+    <a id="p_game_urll" class="btn btn-primary">Download</a>
     <p id='p_game_ver2'>Latest Known Beta version : </p> 
     <a id="p_game_url2" class="btn btn-secondary">Loading...</a>
 </div>
