--- a/level.html
+++ b/level.html
@@ -495,9 +495,9 @@ function SetChar(mtype){
 			res1=res1+"<p>공 체 원충 치명：<font size='4'>"+(r[5]+r[1]+r[0]+r[4]+r[6]).toFixed(1).toString()+"</font>점</p>"
 				break;
 			case 6://호두
-			res1=res1+"<p>체 원마 爆伤：<font size='4'>"+(r[0]+r[3]+r[6]).toFixed(1).toString()+"</font>점</p>"
+			res1=res1+"<p>체 원마 치피：<font size='4'>"+(r[0]+r[3]+r[6]).toFixed(1).toString()+"</font>점</p>"
 			res1=res1+"<p>체 원마 치명：<font size='4'>"+(r[0]+r[3]+r[5]+r[6]).toFixed(1).toString()+"</font>점</p>"
-			res1=res1+"<p>공 체 원마 치명（攻击0.4折算）：<font size='4'>"+(r[0]+r[3]+r[5]+r[6]+r[1]*0.4).toFixed(1).toString()+"</font>점</p>"
+			res1=res1+"<p>공 체 원마 치명（공격력은 0.4로 계산）：<font size='4'>"+(r[0]+r[3]+r[5]+r[6]+r[1]*0.4).toFixed(1).toString()+"</font>점</p>"
 				break;
 			case 7://노엘
 			res1=res1+"<p>방 치명：<font size='4'>"+(r[2]+r[6]+r[5]).toFixed(1).toString()+"</font>점</p>"
@@ -512,7 +512,7 @@ function SetChar(mtype){
 				break;
 			case 10://유라
 			res1=res1+"<p>공 원충 치명：<font size='4'>"+(r[5]+r[1]+r[6]+r[4]).toFixed(1).toString()+"</font>점</p>"
-			res1=res1+"<p>공 击爆伤：<font size='4'>"+(r[1]+r[6]).toFixed(1).toString()+"</font>점</p>"
+			res1=res1+"<p>공 치피：<font size='4'>"+(r[1]+r[6]).toFixed(1).toString()+"</font>점</p>"
 				break;
 			case 11://벤티
 			res1=res1+"<p>공 체 원마 치명：<font size='4'>"+(r[5]+r[1]+r[6]+r[4]+r[3]).toFixed(1).toString()+"</font>점</p>"
