--- a/level.html
+++ b/level.html
@@ -86,7 +86,7 @@ padding: 5px;
 <option>신염</option>
 <option>연비</option>
 <option>요이미야</option>
-<option>토마마</option>
+<option>토마</option>
 </optgroup>
 <optgroup label="얼음">
 <option>치치</option>
