--- a/level.html
+++ b/level.html
@@ -114,6 +114,8 @@ padding: 5px;
 <option>바위행자</option>
 <option>응광</option>
 <option>노엘</option>
+<option>아라타키 이토</option>
+<option>고로</option>
 </optgroup>
 </select>
 </p>
@@ -352,11 +354,19 @@ break;
 case "에일로이":
 this.lv80a={baseHP:10133,baseDEF:629,baseATK:217},this.lv90={baseHP:10899,baseDEF:676,baseATK:234}
 this.mode=1
+break;
 case "토마":
 this.lv80a={baseHP:9616,baseDEF:699,baseATK:188},this.lv90={baseHP:10331,baseDEF:751,baseATK:202}
 this.mode=15
 break;
-
+case "아라타키 이토":
+this.lv80a={baseHP:12740,baseDEF:865,baseATK:178},this.lv90={baseHP:13703,baseDEF:930,baseATK:191}
+this.mode=7
+break;
+case "고로":
+this.lv80a={baseHP:8907,baseDEF:603,baseATK:170},this.lv90={baseHP:9570,baseDEF:648,baseATK:183}
+this.mode=7
+break;
 	default:
 break;
 	}
