--- a/ruble.html
+++ b/ruble.html
@@ -15,24 +15,44 @@
 </div>
 
 <script>
+    var dunamu = "https://quotation-api-cdn.dunamu.com/v1/forex/recent?codes=FRX.KRWRUB";
 
 var request = new XMLHttpRequest();
-var url = "https://hk4e-sdk-os.mihoyo.com/hk4e_global/mdk/shopwindow/shopwindow/listPriceTier?currency=RUB";
-var kebhana = "http://fx.kebhana.com/FER1101M.web";
-var dunamu = "https://quotation-api-cdn.dunamu.com/v1/forex/recent?codes=FRX.KRWRUB";
+var url = "https://api.allorigins.win/get?url=https://hk4e-sdk-os.mihoyo.com/hk4e_global/mdk/shopwindow/shopwindow/listPriceTier?currency=RUB";
 
 request.open("GET", url);
 request.responseType = 'json';
 request.send();
 
 request.onload = function() {
-    request.response.data.tiers.forEach(element => {
-        if(element.tier_id=="Tier_60") {
-            document.getElementById("p_ruble").innerHTML = element.t_price[0].price;
+    var r = request.response.contents;
+    var obj = JSON.parse(r);
+
+    for(key in obj.data.tiers){
+        if(obj.data.tiers[key].tier_id=="Tier_60") {
+            document.getElementById("p_ruble").innerHTML = obj.data.tiers[key].t_price[0].price / 100;
         }
-    });
+    }
 }
+
+var nh_request = new XMLHttpRequest();
+var dunamu = "https://quotation-api-cdn.dunamu.com/v1/forex/recent?codes=FRX.KRWRUB";
+
+nh_request.open("GET", dunamu);
+nh_request.responseType = 'json';
+nh_request.send();
+
+nh_request.onload = function() {
+    var r = nh_request.response[0].ttSellingPrice;
+    var price = parseInt( r * document.getElementById("p_ruble").innerHTML);
+    
+    document.getElementById("p_ruble").innerHTML = "<br>Ruble Truck Price: " + document.getElementById("p_ruble").innerHTML + " RUB<br><br>= " + price + " KRW";
+}
+
+
+
 </script>
+
 
 </body>
 </html>
