--- a/ruble.html
+++ b/ruble.html
@@ -43,8 +43,10 @@ request.onload = function() {
         var r = nh_request.response[0].ttSellingPrice;
         var price = parseInt( r * document.getElementById("p_ruble").innerHTML);
         var rate = parseInt((119000-price)/119000*100);
+
+        var lastmodified = nh_request.response[0].modifiedAt;
         
-        document.getElementById("p_ruble").innerHTML = "<br>Ruble Truck Price: " + document.getElementById("p_ruble").innerHTML + " RUB<br><br>= " + price + " KRW (" + rate + "% off)";
+        document.getElementById("p_ruble").innerHTML = "<br>Ruble Truck Price: " + document.getElementById("p_ruble").innerHTML + " RUB<br><br>= " + price + " KRW (" + rate + "% off)<br><br><br>Source: miHoYo, 하나은행<br>Last Currency update: " + lastmodified;
     }
 }
 </script>
