--- a/level.html
+++ b/level.html
@@ -158,17 +158,17 @@ padding: 5px;
 </p>
 
 <p align="center" class="lt">——무기 기초 공격력——</p>
-<p align="center"><input type="text" id="QQ" value="0" onchange="SetCharS('QQ')"></p>
+<p align="center"><input type="number" id="QQ" value="0" onchange="SetCharS('QQ')"></p>
 
 
 <p align="center" class="lt">——성유물 세부사항——</p>
-<p align="center">+HP 최대치：<input type="text" id="T1" value="0" onchange="SetCharS('T1')"></p>
-<p align="center">+공격력：<input type="text" id="T2" value="0" onchange="SetCharS('T2')"></p>
-<p align="center">+방어력：<input type="text" id="T3" value="0" onchange="SetCharS('T3')"></p>
-<p align="center">+원소 마스터리：<input type="text" id="T4" value="0" onchange="SetCharS('T4')">	</p>
-<p align="center">+치명타 확률%：<input type="text" id="T5" value="0" onchange="SetCharS('T5')">	</p>
-<p align="center">+치명타 피해%：<input type="text" id="T6" value="0" onchange="SetCharS('T6')">	</p>
-<p align="center">+원소 충전 효율%：<input type="text" id="T7" value="0" onchange="SetCharS('T7')">	</p>
+<p align="center">+HP 최대치：<input type="number" id="T1" value="0" onchange="SetCharS('T1')"></p>
+<p align="center">+공격력：<input type="number" id="T2" value="0" onchange="SetCharS('T2')"></p>
+<p align="center">+방어력：<input type="number" id="T3" value="0" onchange="SetCharS('T3')"></p>
+<p align="center">+원소 마스터리：<input type="number" id="T4" value="0" onchange="SetCharS('T4')">	</p>
+<p align="center">+치명타 확률%：<input type="number" float="any" id="T5" value="0" onchange="SetCharS('T5')">	</p>
+<p align="center">+치명타 피해%：<input type="number" float="any" id="T6" value="0" onchange="SetCharS('T6')">	</p>
+<p align="center">+원소 충전 효율%：<input type="number" float="any" id="T7" value="0" onchange="SetCharS('T7')">	</p>
 
 <p align="center" class="lt">——결과——</p>
 <p id="result" align="center"><p>
