--- a/translate.html
+++ b/translate.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <div class="container">
-        <label><i>Current version: output_5371504_9fdb2fe63e</i></label>
+        <label><i>Current version: output_5464564_fd408d7f70 (2023-09-07)</i></label>
 
         <input type="text" id="input-text" placeholder="Enter Text and Press Enter" onkeydown="handleKeyDown(event)">
         
