--- a/translate.html
+++ b/translate.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <div class="container">
-        <label><i>Current version: output_6981039 (2024-05-08)</i></label>
+        <label><i>Current version: output_7358826_27e3e13ab13a (2024-06-19)</i></label>
 
         <input type="text" id="input-text" placeholder="Enter Text and Press Enter" onkeydown="handleKeyDown(event)">
         
@@ -92,7 +92,7 @@
 
         function loadJSON() {
             langs.forEach(lang => {
-                fetch(`./2.2/HashTextmap_${lang}.json`)
+                fetch(`./2.3/HashTextmap_${lang}.json`)
                     .then(response => response.json())
                     .then(data => {
                         // Process the JSON object here
