--- a/translate.html
+++ b/translate.html
@@ -83,7 +83,7 @@
     </div>
 
     <script>
-        const langs = ["en", "cn", "kr", "jp"];
+        const langs = ["EN", "CHS", "KR", "JP"];
         var textmap = {};
 
         function saveData(data, lang) {
