add key in ww & remove useless files

--- a/ww.html
+++ b/ww.html
@@ -74,6 +74,7 @@
             <input type="radio" name="searchtype" value="en"><label for="en">en</label>
             <input type="radio" name="searchtype" value="zh"><label for="zh">zh</label>
             <input type="radio" name="searchtype" value="ja"><label for="ja">ja</label>
+            <input type="radio" name="searchtype" value="key"><label for="key">key</label>
         </form>
 
         <div id="output"></div>
